# cpp-banter

./: .gitignore  CMakeLists.txt  CMakeMacros.cmake  palindrome.cpp  swap.cpp
docs/: workflow.md
src/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/Common/include/Common/: CommonDLL.h  EvolutionPlatformHelper.h  Palindrome.h  Vector3.h
src/Common/src/: Palindrome.cpp  Vector3.cpp
src/Mesh/: CMakeLists.txt
src/Mesh/include/Mesh/: Mesh.h  MeshDLL.h
src/Mesh/src/: Mesh.cpp
src/tests/: CMakeLists.txt
src/tests/include/tests/: testPalindrome.h  tests.h
src/tests/src/: main.cpp  testPalindrome.cpp  tests.cpp
